# linera-dapps

./: .gitignore  Cargo.toml  README.md  deploy-erc20-real-liquidity.sh  deploy-erc20-virtual-liquidity.sh  deploy-local.sh  deploy-new-user.sh  run-local.sh  run_service.sh
ams/: Cargo.toml
ams/src/: contract.rs  lib.rs  service.rs  state.rs
deploy/linera-dapps-k8s/: 02-linera-dapps.yaml  03-ingress.yaml  04-strip-prefix.yaml
docker/: Dockerfile  entrypoint.sh
erc20/: Cargo.toml
erc20/src/: contract.rs  lib.rs  service.rs  state.rs
interfaces/: Cargo.toml
interfaces/src/: erc20.rs  lib.rs  swap.rs
k8s/: 00-configmap.yaml  01-linera-dapps-pvc.yaml  02-linera-dapps.yaml
proxy/: Cargo.toml
proxy/src/: contract.rs  lib.rs  service.rs  state.rs
service/kline/: Jenkinsfile  Makefile  go.mod  go.sum
service/kline-back/common/kptype/: kptype.go
service/kline-back/common/server/: server.go
service/kline-back/proto/kline/: errno.swagger.json  kline.swagger.json
service/kline-back/zeus/api/kpoint/: exist.go
service/kline-back/zeus/api/kprice/: api.go  delete.go  exist.go  query.go
service/kline-back/zeus/api/token/: query.go  update.go
service/kline-back/zeus/api/tokenpair/: delete.go
service/kline-back/zeus/api/transaction/: query.go
service/kline-back/zeus/pkg/beat/: kpoint.go  transaction.go
service/kline-back/zeus/pkg/db/: db.go
service/kline-back/zeus/pkg/summary/: volumn.go
service/kline/common/kptype/: kptype.go
service/kline/common/server/: server.go
service/kline/common/version/: version.go
service/kline/config/: config.go  config.toml
service/kline/hack/: verify.sh
service/kline/k8s/: 00-configmap.yaml  01-kline-service.yaml  02-traefik-ingress.yaml  03-strip-prefix.yaml  kustomization.yaml
service/kline/proto/: Makefile
service/kline/proto/kline/: errno.pb.go  errno.proto  kline.pb.go  kline.proto
service/kline/zeus/api/: api.go  version.go  version_test.go
service/kline/zeus/api/kpoint/: api.go  create.go  delete.go  exist.go  query.go  update.go
service/kline/zeus/api/kprice/: api.go  create.go  delete.go  exist.go  query.go  update.go
service/kline/zeus/api/summary/: api.go  exist.go  query.go
service/kline/zeus/api/token/: api.go  create.go  delete.go  exist.go  query.go  update.go
service/kline/zeus/api/tokenpair/: api.go  create.go  delete.go  exist.go  query.go  update.go
service/kline/zeus/api/transaction/: api.go  create.go  delete.go  exist.go  query.go  update.go
service/kline/zeus/cmd/zeus/: main.go  run.go
service/kline/zeus/pkg/applications/: base.go  erc20.go  swap.go  types.go
service/kline/zeus/pkg/beat/: kpoint.go  kprice.go  transaction.go
service/kline/zeus/pkg/db/: db.go
service/kline/zeus/pkg/servicename/: servicename.go
service/kline/zeus/pkg/summary/: summary.go  volumn.go
service/kline/zeus/script/: build-docker-image.sh  build.sh  deploy-to-k8s-cluster.sh  release-docker-image.sh
spec/: Cargo.toml
spec/src/: account.rs  ams.rs  base.rs  blob_gateway.rs  erc20.rs  extra_info.rs  lib.rs  swap.rs
spec/src/swap/: abi.rs  mod.rs  pool.rs  router.rs  state.rs
swap/: Cargo.toml
swap/pool/: Cargo.toml
swap/pool/src/: contract.rs  lib.rs  service.rs  state.rs
swap/router/: Cargo.toml
swap/router/src/: contract.rs  errno.rs  lib.rs  pool_manager.rs  router.rs  runtime.rs  service.rs  state.rs
swap/src/: contract.rs  lib.rs  service.rs  state.rs
webui/: Jenkinsfile  README.md  nginx.template.conf  package.json  quasar.conf.js
webui/.github/workflows/: ci.yml
webui/k8s/: 01-kline-webui.yaml  02-ingress.yaml  kustomization.yaml
webui/kline/: README.md  package.json  quasar.conf.js
webui/kline/k8s/: 01-kline-webui.yaml  02-ingress.yaml
webui/kline/src/boot/: axios.ts
webui/kline/src/components/bulletin/: Holder.vue
webui/kline/src/components/meme/: CreateMeme.vue  CreateMemeInner.vue  MemeList.vue
webui/kline/src/components/navigator/: ConnectWallet.vue
webui/kline/src/components/swap/: Swap.vue
webui/kline/src/const/: const.ts  index.ts
webui/kline/src/controller/: db.ts
webui/kline/src/i18n/en-US/: index.ts
webui/kline/src/layouts/: MainLayout.vue
webui/kline/src/model/: index.ts
webui/kline/src/model/db/: model.ts
webui/kline/src/mystore/: index.ts
webui/kline/src/mystore/kline/: index.ts  local.ts  types.ts
webui/kline/src/mystore/swap/: local.ts  types.ts
webui/kline/src/pages/: DBDemo.vue  MemeList.vue  Swap.vue
webui/kline/src/router/: index.ts  routes.ts
webui/kline/src/stores/: memeInfo.ts
webui/kline/src/utils/: index.ts
webui/src/apollo/: client.ts  index.ts
webui/src/assets/: index.ts
webui/src/components/banner/: Banner.vue  BlobBanner.vue  MemeBanner.vue
webui/src/components/blob/: BlobList.vue
webui/src/components/bulletin/: Holder.vue  Volume.vue
webui/src/components/kline/: KLine.vue  KLineOption.ts  SwapSelect.vue
webui/src/components/liquidity/: AddLiquidity.vue  AddTokenLiquidity.vue  RemoveLiquidity.vue
webui/src/components/logo/: Logo.vue
webui/src/components/meme/: CreateMeme.vue  CreateMemeInner.vue  MemeCard.vue  MemeList.vue
webui/src/components/navigator/: ConnectWallet.vue  Navigator.vue
webui/src/components/swap/: Swap.vue
webui/src/components/trades/: Trades.vue
webui/src/const/: const.ts
webui/src/css/: app.sass  quasar.variables.sass
webui/src/i18n/en-US/: index.ts
webui/src/mystore/: action.ts  index.ts
webui/src/mystore/bulletin/: local.ts  types.ts
webui/src/mystore/host/: index.ts
webui/src/mystore/kline/: local.ts  types.ts
webui/src/mystore/notification/: helper.ts  notification.ts  state.ts  types.ts
webui/src/mystore/swap/: local.ts  types.ts
webui/src/mystore/trades/: local.ts  types.ts
webui/src/mystore/user/: local.ts  types.ts
webui/src/mystore/wallet/: local.ts  types.ts
webui/src/pages/: AddLiquidity.vue  BlobList.vue  CreateMeme.vue  DBDemo.vue  MemeList.vue  Swap.vue
webui/src/router/: routes.ts
webui/src/stores/: block.ts  memeInfo.ts  pool.ts
webui/src/utils/: interceptor.ts
(+212 files in other folders)
