[workspace]
members = [
    "spec",
    "erc20",
    "swap/pool",
    "swap/router",
]
resolver = "2"

[workspace.dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
linera-sdk = { version = "0.12.1", git = "https://github.com/linera-io/linera-protocol.git", rev = "v0.12.1" }
linera-views = { version = "0.12.1", git = "https://github.com/linera-io/linera-protocol.git", rev = "v0.12.1" }
thiserror = "1.0.57"
serde = { version = "1.0.197", features = ["derive"] }
bcs = "0.1.6"
num-bigint = "0.4.3"
num-traits = "0.2.18"
log = "0.4.21"
serde_json = "1.0.114"

spec = { path = "./spec" }

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'

[profile.bench]
debug = true
