[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql.workspace = true
linera-sdk.workspace = true

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "proxy_contract"
path = "src/contract.rs"

[[bin]]
name = "proxy_service"
path = "src/service.rs"
