[package]
name = "swap-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql.workspace = true
linera-sdk.workspace = true
spec.workspace = true
thiserror.workspace = true
bcs.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

[[bin]]
name = "swap_pool_contract"
path = "src/contract.rs"

[[bin]]
name = "swap_pool_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
