[package]
name = "swap-router"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql.workspace = true
linera-sdk.workspace = true
spec.workspace = true
thiserror.workspace = true
bcs.workspace = true
log.workspace = true

[dev-dependencies]
linera-sdk = { workspace = true, features = ["test"] }

